--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,7 +38,7 @@ jobs:
         env:
           deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK }}
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        if: ${{ github.event_name == 'push' && ! contains(join($COMMIT_MESSAGES, ', '), '#skip') }}
+        if: ${{ github.event_name == 'push' && ! contains(join("$COMMIT_MESSAGES", ', '), '#skip') }}
         run: |
           curl "$deploy_url"
   tag_release:
@@ -51,5 +51,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        if: ${{ github.event_name == 'push' && ! contains(join($COMMIT_MESSAGES, ', '), '#skip')}}
+        if: ${{ github.event_name == 'push' && ! contains(join("$COMMIT_MESSAGES", ', '), '#skip')}}
         uses: anothrNick/github-tag-action@1.67.0
