--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,8 +37,7 @@ jobs:
       - name: Trigger deployment
         env:
           deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK }}
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        if: ${{ github.event_name == 'push' && ! contains(join("$COMMIT_MESSAGES", ', '), '#skip') }}
+        if: ${{ github.event_name == 'push' && ! contains(join(${{ toJson(github.event.commits.*.message) }}, ', '), '#skip') }}
         run: |
           curl "$deploy_url"
   tag_release:
@@ -50,6 +49,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        if: ${{ github.event_name == 'push' && ! contains(join("$COMMIT_MESSAGES", ', '), '#skip')}}
+        if: ${{ github.event_name == 'push' && ! contains(join(${{ toJson(github.event.commits.*.message) }}, ', '), '#skip')}}
         uses: anothrNick/github-tag-action@1.67.0
