--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,7 +42,7 @@ jobs:
           curl "$deploy_url"
       - name: New version deployed
         uses: rjstone/discord-webhook-notify@v1
-        if: success()
+        if: github.event_name == 'push' && success()
         with:
           severity: info
           details: New version successfully deployed
